# Toy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
interface/: CMakeLists.txt  IModule.h  IPlugin.h  IPluginManager.h  LogIModule.h  Platform.h  RenderSystemIModule.h  SystemIModule.h  SystemWinIModule.h
main/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt
plugin/LogPlugin/: CMakeLists.txt  LogModule.cpp  LogModule.h  LogPlugin.cpp  LogPlugin.h
plugin/PluginLoader/: CMakeLists.txt  DynLib.cpp  DynLib.h  PluginManager.cpp  PluginManager.h
plugin/SystemWinPlugin/: CMakeLists.txt  SystemWinModule.cpp  SystemWinModule.h  SystemWinPlugin.cpp  SystemWinPlugin.h
plugin/VulkanPlugin/: CMakeLists.txt  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicDeviceManager.cpp  VulkanPhysicDeviceManager.h  VulkanPlugin.cpp  VulkanPlugin.h  VulkanRenderSystemModule.cpp  VulkanRenderSystemModule.h  VulkanValidationLayers.cpp  VulkanValidationLayers.h
