set(TARGET_NAME "Interface")
file(GLOB INTERFACE_H *.h)
add_library(${TARGET_NAME} INTERFACE ${INTERFACE_H})

target_include_directories(${TARGET_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties( ${TARGET_NAME} PROPERTIES OUTPUT_NAME_DEBUG "${TARGET_NAME}")
set_target_properties( ${TARGET_NAME} PROPERTIES PREFIX "")
set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER "")

set_target_properties( ${TARGET_NAME} PROPERTIES 
        ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}
        LIBRARY_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}
        RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR})